--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,21 +52,16 @@
                 style="@style/Theme.QualMeuEndereco.TextFields"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:hint="@string/state" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/reference_field"
                 style="@style/Theme.QualMeuEndereco.TextFields"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:hint="@string/city" />
         </LinearLayout>
