--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,22 +48,12 @@
             android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/uf_field"
+                android:id="@+id/city_field"
                 style="@style/Theme.QualMeuEndereco.TextFields"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="10dp"
                 android:layout_weight="1"
-                android:hint="@string/state" />
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/reference_field"
-                style="@style/Theme.QualMeuEndereco.TextFields"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="10dp"
-                android:layout_weight="1"
-                android:hint="@string/city" />
+                android:hint="@string/neighborhood" />
         </LinearLayout>
 
         <LinearLayout
@@ -72,13 +62,33 @@
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Theme.QualMeuEndereco.TextFields.State"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1">
+
+                <AutoCompleteTextView
+                    android:id="@+id/uf_field"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:dropDownHeight="200dp"
+                    android:hint="@string/state"
+                    android:inputType="none"
+                    android:text="@string/state_eg"
+                    android:textSize="13sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/city_field"
+                android:id="@+id/reference_field"
                 style="@style/Theme.QualMeuEndereco.TextFields"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:hint="@string/neighborhood" />
+                android:hint="@string/city" />
         </LinearLayout>
 
     </LinearLayout>
